[tool.poetry]
name = "etl-backup-case"
version = "0.1.0"
description = ""
authors = ["Victor Barros <victorbarros51@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.37.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
